force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__Account__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account to which this Quote Line Group references.</description>
        <inlineHelpText>Account to which this Quote Line Group references.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>QuoteLineGroups</relationshipName>
        <type>Lookup</type>
    </CustomField>