force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__AdditionalDiscountRate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AdditionalDiscountRate__c</fullName>
        <description>Default additional discount rate applied to line items in this group.</description>
        <inlineHelpText>Default additional discount rate applied to line items in this group.</inlineHelpText>
        <label>Additional  Disc. (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>