force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__MarkupRate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Default markup rate applied to line items in this group.</description>
        <inlineHelpText>Default markup rate applied to line items in this group. This will override the line item level.</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>