force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__Number__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Number__c</fullName>
        <description>Sort order of this group within its quote.</description>
        <inlineHelpText>Sort order of this group within its quote.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>