force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__Optional__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks the entire group as optional.</description>
        <inlineHelpText>Marks the entire group as optional.</inlineHelpText>
        <label>Optional</label>
        <type>Checkbox</type>
    </CustomField>