force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__Quote__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Quote__c</fullName>
        <description>Quote to which this group belongs.</description>
        <inlineHelpText>Quote to which this group belongs.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>LineItemGroups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>