force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__SeparateContract__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SeparateContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that forces a separate contract for this group.</description>
        <inlineHelpText>Select the checkbox to generate a separate contract for subscriptions in this group.</inlineHelpText>
        <label>Separate Contract</label>
        <type>Checkbox</type>
    </CustomField>