force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__SolutionGroup__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SolutionGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Solution group from which this quote group was generated (if any).</description>
        <inlineHelpText>Solution group from which this quote group was generated (if any).</inlineHelpText>
        <label>Solution Group</label>
        <referenceTo>SBQQ__SolutionGroup__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>QuoteLineGroups</relationshipName>
        <type>Lookup</type>
    </CustomField>