force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__Source__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Source of cloned quote line group.</description>
        <inlineHelpText>Source of cloned quote line group.</inlineHelpText>
        <label>Source</label>
        <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
        <relationshipLabel>Quote Line Groups</relationshipLabel>
        <relationshipName>Clones</relationshipName>
        <type>Lookup</type>
    </CustomField>