force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__SubscriptionTerm__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Subscription term used to prorate eligible products in this group.</description>
        <inlineHelpText>Subscription term used to prorate eligible products in this group.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>